--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-17 [回应北京修改香港选举法 美国宣布扩大制裁14名中国人大副委员长](/articles/voa/1042242.md)
+
 3-17 [女老师训练幼犬帮助有需要的人](/articles/voa/1042243.md)
 
 3-17 [拜登政府官员：对中国策略是全球性的，政府各部门协调一致不容中国分化](/articles/voa/1042244.md)
@@ -598,6 +600,4 @@
 3-2 [美国会议员重提决议案要求废除“一个中国政策”并承认台湾](/articles/voa/1042540.md)
 
 3-2 [创造“中国”：为什么中共对领土问题额外敏感？](/articles/voa/1042541.md)
-
-3-2 [白宫要义: 拜登政府2021贸易谈判将处理中国强制且不公平的贸易行为](/articles/voa/1042542.md)
 
