--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-17 [亚特兰大按摩院枪击案：八人死亡，六人为亚裔](/articles/nyt/1047083.md)
+
 3-17 [加密聊天软件Signal疑在中国被封锁](/articles/nyt/1047084.md)
 
 3-17 [习近平气候雄心的绊脚石：煤炭](/articles/nyt/1047085.md)
@@ -598,6 +600,4 @@
 12-28 [中国应对肥胖和食品浪费问题，“大胃王吃播”或遭罚款](/articles/nyt/1047381.md)
 
 12-28 [澳洲运煤船未获中国卸货许可，船员被困海上数月](/articles/nyt/1047382.md)
-
-12-28 [中国“芯片热”背后：投资泡沫、项目烂尾](/articles/nyt/1047383.md)
 
