--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+3-17 [亚股追随美股回落 投资者等待美联储会议结果](/articles/reuters/1040447.md)
+
 3-17 [日本暂时提高美国牛肉进口关税 因进口量已超过协议水平](/articles/reuters/1040448.md)
 
 3-17 [加拿大政府要求法院驳回华为CFO孟晚舟的两项论点](/articles/reuters/1040449.md)
@@ -598,6 +600,4 @@
 3-4 [专用注射器不够用 影响日本新冠疫苗接种](/articles/reuters/1040745.md)
 
 3-4 [韩国军方称抓获一名越境的朝鲜人 可能是脱北者](/articles/reuters/1040746.md)
-
-3-4 [联合国警告缅甸军方不要对示威者作强硬回应 否则面临“严重后果”](/articles/reuters/1040747.md)
 
