--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,16 @@
 路透
 ------
 
+3-17 [中国2020年芯片产业销售额增长17.8%--半导体行业协会理事长](/articles/reuters/1040440.md)
+
+3-17 [美方将在阿拉斯加中美高层会晤时采取“不妥协”的立场--美国官员](/articles/reuters/1040441.md)
+
+3-17 [深圳传音控股成首家本外币一体化资金池试点企业 渣打为首家外资合作行](/articles/reuters/1040442.md)
+
+3-17 [分析：美国刺激政策对欧洲应利大于弊 但欧洲需先控制住疫情](/articles/reuters/1040443.md)
+
+3-17 [辉瑞决定停止在中国生产生物仿制药 将资产售予药明生物（更新版）](/articles/reuters/1040444.md)
+
 3-17 [焦点：疫情支票怎么花？ 提心吊胆的美国人打算用来还债和交税](/articles/reuters/1040445.md)
 
 3-17 [百度赴香港第二上市招股价定价252港元 集资30.8亿美元--消息](/articles/reuters/1040446.md)
@@ -590,14 +600,4 @@
 3-5 [国际油价触及逾一年最高 OPEC+宣布在4月基本维持产量不变](/articles/reuters/1040738.md)
 
 3-5 [美元触及三个月最高 鲍威尔未对近期美债遭抛售表示担忧](/articles/reuters/1040739.md)
-
-3-5 [美国股市大幅收低 鲍威尔讲话令担心收益率上升的投资者感到失望](/articles/reuters/1040740.md)
-
-3-4 [丰田汽车位于日本的九座集团工厂共14条生产线因地震而停产](/articles/reuters/1040741.md)
-
-3-4 [比特币距5万美元仅一步之遥](/articles/reuters/1040742.md)
-
-3-4 [缅甸军方否认发动政变 承诺举行新的大选后进行权力移交](/articles/reuters/1040743.md)
-
-3-4 [图表新闻：黄金和白银基金遭遇三个月来最大单周资金外流](/articles/reuters/1040744.md)
 
