--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-17 [疫苗安全疑虑续延烧 欧盟称打疫苗好处大於风险](/articles/dw/1043471.md)
+
 3-17 [外交不输北京 美议员提议增加经费](/articles/dw/1043472.md)
 
 3-17 [英外交转向印太 约翰逊谨慎看待中国](/articles/dw/1043473.md)
@@ -598,6 +600,4 @@
 2-22 [客座评论：抗疫与民粹挤压下的中国基督教](/articles/dw/1043769.md)
 
 2-22 [军政府实弹镇压未遏制缅甸民主运动](/articles/dw/1043770.md)
-
-2-22 [中官员强调「爱国者治港」学者：中国想控制香港](/articles/dw/1043771.md)
 
