--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-17 [台湾人权及公民团体：中国当局应给予李明哲基本人权](/articles/voa/1042240.md)
+
 3-17 [白宫对本周美中高层会谈无高度期待](/articles/voa/1042241.md)
 
 3-17 [回应北京修改香港选举法 美国宣布扩大制裁14名中国人大副委员长](/articles/voa/1042242.md)
@@ -598,6 +600,4 @@
 3-2 [美国政府和国会谴责香港指控47名民主人士](/articles/voa/1042538.md)
 
 3-2 [美国和平队服务60周年 把友谊与和平带给世界](/articles/voa/1042539.md)
-
-3-2 [美国会议员重提决议案要求废除“一个中国政策”并承认台湾](/articles/voa/1042540.md)
 
