--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,7 +1,9 @@
 中国数字时代
 ------
 
-3-17 [勿以类拒｜大胃王吃播“泡泡龙”之死](/articles/cdt/384913.md)
+3-17 [八点健闻｜百余种中成药修改说明书，曾长期享有“不良反应一笔带过”的特权](/articles/cdt/384910.md)
+
+3-17 [勿以类拒｜大胃王吃播博主“泡泡龙”之死](/articles/cdt/384913.md)
 
 3-17 [德国之声 | 美媒：中国要求阿里巴巴出售旗下媒体业务](/articles/cdt/384918.md)
 
@@ -598,6 +600,4 @@
 2-4 [极昼｜现实版“樊胜美”：大三陪酒给弟弟挣生活费 母亲认为有钱就行](/articles/cdt/386220.md)
 
 2-4 [捌点来读｜人人字幕组倒掉了，媒体们又集体翻车了](/articles/cdt/386246.md)
-
-2-4 [导筒directube｜中国字幕组与新自由主义的工作伦理](/articles/cdt/386247.md)
 
