--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-17 [美中对话前夕美官措辞强硬    对抗升级冲突可能性增加](/articles/rfa/1046144.md)
+
 3-17 [牢握笔杆子 南华早报成中共整肃马云祭品？](/articles/rfa/1046145.md)
 
 3-17 [中国签证限制外国留学生回中国：被迫看视频学缝合手术](/articles/rfa/1046146.md)
@@ -598,6 +600,4 @@
 2-11 [加拿大情报局长罕见公开批评中国威胁主权并窃取机密](/articles/rfa/1046442.md)
 
 2-11 [推进宗教中国化 《管理办法》禁止神职人员受境外势力支配](/articles/rfa/1046443.md)
-
-2-10 [留学生讨薪遭殴打，议员洗地引众怒](/articles/rfa/1046444.md)
 
