--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-17 [六神磊磊｜脱口秀这东西就不适合我国国情](/articles/cdt/384908.md)
+
 3-17 [八点健闻｜百余种中成药修改说明书，曾长期享有“不良反应一笔带过”的特权](/articles/cdt/384910.md)
 
 3-17 [勿以类拒｜大胃王吃播博主“泡泡龙”之死](/articles/cdt/384913.md)
@@ -598,6 +600,4 @@
 2-5 [Matters｜JV：我的体制见闻录](/articles/cdt/386219.md)
 
 2-4 [极昼｜现实版“樊胜美”：大三陪酒给弟弟挣生活费 母亲认为有钱就行](/articles/cdt/386220.md)
-
-2-4 [捌点来读｜人人字幕组倒掉了，媒体们又集体翻车了](/articles/cdt/386246.md)
 
