--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-17 [亚太首例 台湾、帕劳开启“旅游泡泡”](/articles/rfa/1046141.md)
+
+3-17 [贵阳一家庭教会被冲击 多人被带走未获释](/articles/rfa/1046142.md)
+
 3-17 [中国出台“农林22条”陆委会：名为惠台、实则利中](/articles/rfa/1046143.md)
 
 3-17 [美中对话前夕美官措辞强硬    对抗升级冲突可能性增加](/articles/rfa/1046144.md)
@@ -596,8 +600,4 @@
 2-11 [“精英俱乐部”在中国被封禁: 背后原因不简单](/articles/rfa/1046439.md)
 
 2-11 [17+1变成17-6  中国中东欧峰会面临外交挫折](/articles/rfa/1046440.md)
-
-2-11 [开除与劝退：中国同志群体的困境](/articles/rfa/1046441.md)
-
-2-11 [加拿大情报局长罕见公开批评中国威胁主权并窃取机密](/articles/rfa/1046442.md)
 
