--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-17 [李明哲遭中国关押近四年 家属一年无法探视](/articles/rfa/1046140.md)
+
 3-17 [亚太首例 台湾、帕劳开启“旅游泡泡”](/articles/rfa/1046141.md)
 
 3-17 [贵阳一家庭教会被冲击 多人被带走未获释](/articles/rfa/1046142.md)
@@ -598,6 +600,4 @@
 2-11 [国际学界致信中共高层领导人 呼吁让郭飞雄赴美照料病妻](/articles/rfa/1046438.md)
 
 2-11 [“精英俱乐部”在中国被封禁: 背后原因不简单](/articles/rfa/1046439.md)
-
-2-11 [17+1变成17-6  中国中东欧峰会面临外交挫折](/articles/rfa/1046440.md)
 
