--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-18 [解放军6年内攻台？台防长：随时防范、奉陪到底](/articles/rfa/1046139.md)
+
 3-17 [李明哲遭中国关押近四年 家属一年无法探视](/articles/rfa/1046140.md)
 
 3-17 [亚太首例 台湾、帕劳开启“旅游泡泡”](/articles/rfa/1046141.md)
@@ -598,6 +600,4 @@
 2-11 [中国近邻忧北京穷兵黩武  官媒称美双航母在南海炫武](/articles/rfa/1046437.md)
 
 2-11 [国际学界致信中共高层领导人 呼吁让郭飞雄赴美照料病妻](/articles/rfa/1046438.md)
-
-2-11 [“精英俱乐部”在中国被封禁: 背后原因不简单](/articles/rfa/1046439.md)
 
