--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+3-18 [新冠病毒颗粒小全球夺命逾百万](/articles/voa/1042214.md)
+
+3-18 [英国计划在重大防务评估中对抗来自中国的挑战](/articles/voa/1042215.md)
+
+3-18 [美国官员反驳恐怖分子试图经墨西哥进入美国的指称](/articles/voa/1042216.md)
+
+3-18 [中国在缅工厂因何遇袭？缅甸人为什么对中国感到愤怒？](/articles/voa/1042217.md)
+
 3-18 [盖洛普民调：创纪录比例的美国人认为中国是最大敌人](/articles/voa/1042218.md)
 
 3-18 [美全国制造商协会敦促拜登迅速制定对华新战略 加强与中国竞争的能力](/articles/voa/1042219.md)
@@ -592,12 +600,4 @@
 3-3 [强生疫苗加入抗疫行列](/articles/voa/1042512.md)
 
 3-3 [美国默克药厂同意帮助生产强生新冠疫苗](/articles/voa/1042513.md)
-
-3-3 [“你今天凤梨了吗？” 美加驻台机构力挺北京拒绝进口的台湾凤梨](/articles/voa/1042514.md)
-
-3-3 [FBI局长：发生在国会大厦的骚乱是“国内恐怖主义”](/articles/voa/1042515.md)
-
-3-3 [去年美国各大城市针对亚裔美国人仇恨犯罪猛增150%](/articles/voa/1042516.md)
-
-3-3 [时事大家谈: 后疫情时代，中国与西方关系迎来拐点？](/articles/voa/1042517.md)
 
