--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-18 [黄峥辞任拼多多董事长](/articles/ft/1045895.md)
+
 3-17 [中国非洲猪瘟病毒出现新变种](/articles/ft/1045896.md)
 
 3-17 [创新、民生与绿色：中国“十四五”规划主要维度](/articles/ft/1045897.md)
@@ -598,6 +600,4 @@
 1-26 [中国加大“一带一路”绿色能源投资](/articles/ft/1046193.md)
 
 1-26 [Dominion投票系统公司起诉特朗普律师朱利安尼](/articles/ft/1046194.md)
-
-1-26 [拜登政府对华政策走向何方？](/articles/ft/1046195.md)
 
