--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-18 [【网络民议】江苏女辅警“敲诈”案后续，法院拒绝家属委托律师](/articles/cdt/384872.md)
+
 3-18 [女孩别怕 | 上不去的热搜，不可说的北京水利水电学校，我偏要来说一说](/articles/cdt/384876.md)
 
 3-18 [德国之声 | 欧盟同意就新疆人权问题制裁中国官员](/articles/cdt/384877.md)
@@ -598,6 +600,4 @@
 2-5 [知灼 | 慰问困难户引来围观，其实还是老问题](/articles/cdt/386198.md)
 
 2-5 [央视新闻｜最新！“劣迹艺人”可被永久抵制，复出需报批](/articles/cdt/386199.md)
-
-2-5 [德国之声 | 长平观察：踏入历史，修复过往](/articles/cdt/386200.md)
 
