--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+3-18 [2020年中国风电装机容量创纪录](/articles/ft/1045893.md)
+
+3-18 [俄罗斯召回驻美大使](/articles/ft/1045894.md)
+
 3-18 [黄峥辞任拼多多董事长](/articles/ft/1045895.md)
 
 3-17 [中国非洲猪瘟病毒出现新变种](/articles/ft/1045896.md)
@@ -596,8 +600,4 @@
 1-27 [纳粹受害者纪念日里的阅读和思考](/articles/ft/1046191.md)
 
 1-26 [中国央行官员警告资产泡沫风险](/articles/ft/1046192.md)
-
-1-26 [中国加大“一带一路”绿色能源投资](/articles/ft/1046193.md)
-
-1-26 [Dominion投票系统公司起诉特朗普律师朱利安尼](/articles/ft/1046194.md)
 
