--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-18 [北京判断「东升西落」? 美中会谈硬碰硬](/articles/dw/1043456.md)
+
 3-18 [北京判断「东升西落」? 媒体曝美中会谈硬碰硬](/articles/dw/1043457.md)
 
 3-18 [欧盟同意就新疆人权问题制裁中国官员](/articles/dw/1043458.md)
@@ -598,6 +600,4 @@
 2-23 [英国批新疆「工业化规模」人权侵害　中国反击](/articles/dw/1043754.md)
 
 2-22 [英国外相：新疆发生的人权侵害是“工业化规模”](/articles/dw/1043755.md)
-
-2-22 [伊凡卡不选佛州参议员 特朗普2024年东山再起？](/articles/dw/1043756.md)
 
