--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-18 [两党联手 美参院外交领袖：重大抗中法案最快四月中审议](/articles/voa/1042211.md)
+
 3-18 [名牌泳装厂生产口罩医袍抗新冠](/articles/voa/1042212.md)
 
 3-18 [中国疫苗外交声势浩大得分几多？](/articles/voa/1042213.md)
@@ -598,6 +600,4 @@
 3-3 [两使节分庭抗礼：谁是缅甸驻联合国合法代表？](/articles/voa/1042509.md)
 
 3-3 [纽约市纪念新冠疫情爆发一周年](/articles/voa/1042510.md)
-
-3-3 [因华为议题短暂受阻后 美参议院确认雷蒙多出任商务部长](/articles/voa/1042511.md)
 
