--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-18 [Newtalk｜月赚7千美元？爱党网红郑国成醉后吐真言小粉红傻眼](/articles/cdt/384849.md)
+
 3-18 [我地有笔 | 香港民主派47人小传（节选）](/articles/cdt/384861.md)
 
 3-18 [【网络民议】江苏女辅警“敲诈”案后续，法院拒绝家属委托律师](/articles/cdt/384872.md)
@@ -598,6 +600,4 @@
 2-5 [【网络民议】BBC新疆性侵报道引发全球关注，中国网民晦涩地讨论新疆](/articles/cdt/386196.md)
 
 2-5 [呦呦鹿鸣｜谁是“困难群众” ？](/articles/cdt/386197.md)
-
-2-5 [知灼 | 慰问困难户引来围观，其实还是老问题](/articles/cdt/386198.md)
 
