--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-18 [拜登与习近平谨慎博弈，美国新对华政策现雏形](/articles/nyt/1047076.md)
+
 3-18 [关于亚特兰大枪击案，目前我们所知道的](/articles/nyt/1047077.md)
 
 3-18 [中美高层对话前夕，美国就香港问题制裁24名中共官员](/articles/nyt/1047078.md)
@@ -598,6 +600,4 @@
 12-30 [国药集团宣布其新冠疫苗有效率达79%](/articles/nyt/1047374.md)
 
 12-30 [逃往台湾未果的香港活动人士在深圳获刑](/articles/nyt/1047375.md)
-
-12-30 [简报：中欧接近达成历史性投资协定；美国现英国变异毒株](/articles/nyt/1047376.md)
 
