--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-18 [跳蚤市场淘一瓷碗  买家意外发财](/articles/dw/1043452.md)
+
 3-18 [许智峯：我应把自由的每一刻都用在国际遊说](/articles/dw/1043453.md)
 
 3-18 [德语媒体：在中国面前，美日强硬起来](/articles/dw/1043454.md)
@@ -598,6 +600,4 @@
 2-23 [美候任副财长：将对抗中国不平等的经济行为](/articles/dw/1043750.md)
 
 2-23 [美国新冠死亡数破50万 占全球五分之一](/articles/dw/1043751.md)
-
-2-23 [加拿大国会认定中国对维吾尔人种族灭绝](/articles/dw/1043752.md)
 
