--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-18 [网信息办启动语音识别监控    约谈 腾讯、字节跳动等企业](/articles/rfa/1046130.md)
+
 3-18 [小米禁令被驳回  其它公司或步小米后尘](/articles/rfa/1046131.md)
 
 3-18 [考不上本科智商有问题? 中国的招聘鄙视链](/articles/rfa/1046132.md)
@@ -598,6 +600,4 @@
 2-12 [香港抗争者在台开餐厅 婉拒捐款不愿标签化](/articles/rfa/1046428.md)
 
 2-11 [年三十团圆夜 香港数百抗争者与民主人士铁窗渡过](/articles/rfa/1046429.md)
-
-2-11 [疫苗外交下  东盟仍有逾六成人不信任中国](/articles/rfa/1046430.md)
 
