--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-18 [美高官会晤中国高官前密集与盟友接触 崔天凯揶揄美方“走夜路唱歌为自己壮胆”](/articles/voa/1042207.md)
+
+3-18 [耍人质外交？北京选择美中高层对话当天审判加拿大公民](/articles/voa/1042208.md)
+
+3-18 [美韩结束2加2会谈 联合声明未点名中国](/articles/voa/1042209.md)
+
 3-18 [北京即将以间谍罪名开庭审理加拿大“两麦克”案](/articles/voa/1042210.md)
 
 3-18 [两党联手 美参院外交领袖：重大抗中法案最快四月中审议](/articles/voa/1042211.md)
@@ -594,10 +600,4 @@
 3-3 [“疫苗外交”能否帮中国加大在巴尔干半岛的影响力](/articles/voa/1042505.md)
 
 3-3 [美国政府宣布制裁参与对纳瓦尔尼投毒的俄罗斯高官](/articles/voa/1042506.md)
-
-3-3 [多种因素导致美国的国际学生入学受到影响](/articles/voa/1042507.md)
-
-3-3 [疫苗接种系统漏洞多亟待协调匡正](/articles/voa/1042508.md)
-
-3-3 [两使节分庭抗礼：谁是缅甸驻联合国合法代表？](/articles/voa/1042509.md)
 
