--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -15,6 +15,8 @@
 
 3-18 [自由亚洲 | Signal疑被墙 中国计划出新规筑更高的墙](/articles/cdt/384879.md)
 
+3-18 [非常魏道｜学者可以无耻到什么地步？康震的“正能量”还真吓着我了](/articles/cdt/384881.md)
+
 3-17 [【弄个大新闻】为了说服自己的父母，年轻人决定用微信公号“以毒攻毒”](/articles/cdt/384906.md)
 
 3-17 [六神磊磊｜脱口秀这东西就不适合我国国情](/articles/cdt/384908.md)
@@ -598,6 +600,4 @@
 2-6 [【中国哭墙】一年了，不要也不能遗忘。（2月1-6日，2021年）](/articles/cdt/386181.md)
 
 2-5 [端传媒｜无人机卖给了新疆武警，一家德国公司的责任边界](/articles/cdt/386187.md)
-
-2-5 [【网络民议】BBC新疆性侵报道引发全球关注，中国网民晦涩地讨论新疆](/articles/cdt/386196.md)
 
