--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-18 [法国外交部：参议员有权同任何人会晤](/articles/dw/1043447.md)
+
+3-18 [亚裔遇害案:警方发言人疑有种族主义言论](/articles/dw/1043448.md)
+
 3-18 [拜登称普京是“杀人犯” 莫斯科怒了](/articles/dw/1043449.md)
 
 3-18 [坦桑尼亚总统去世 曾因为新冠否认论备受争议](/articles/dw/1043450.md)
@@ -596,8 +600,4 @@
 2-23 [港府拟立法要求议员宣誓效忠](/articles/dw/1043745.md)
 
 2-23 [爱沙尼亚：欧盟向俄发出 “强烈信号“](/articles/dw/1043746.md)
-
-2-23 [客座评论:拜登对华政策的四个关键词](/articles/dw/1043747.md)
-
-2-23 [塞尔维亚：中国最中意的合作伙伴](/articles/dw/1043748.md)
 
