--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-18 [专家：美韩2+2会议显示以美日韩同盟为中心打造东亚秩序](/articles/voa/1042203.md)
+
+3-18 [老挝签订电网特许协议，中國全面控管25年](/articles/voa/1042204.md)
+
 3-18 [华日：中国打算在阿拉斯加会谈时要求美国扭转许多特朗普对华政策](/articles/voa/1042205.md)
 
 3-18 [Signal遭中共封杀 分析：欲封堵获取真相渠道](/articles/voa/1042206.md)
@@ -596,8 +600,4 @@
 3-3 [寻找新冠源头 科学家：是时候对武汉病毒所进行独立调查了](/articles/voa/1042501.md)
 
 3-3 [微软公司报告主要服务公司客户的电邮系统被中国政府黑客攻入](/articles/voa/1042502.md)
-
-3-3 [中国频繁窃取韩国技术，挖角、内奸、黑客并用手法巧妙](/articles/voa/1042503.md)
-
-3-3 [美军将领警告世界：尝尝被中国主宰的“滋味”](/articles/voa/1042504.md)
 
