--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+3-19 [“美国高校，你想以与中共合作留名历史吗？” 美中科研合作是共赢还是养患](/articles/voa/1042197.md)
+
+3-19 [世维大会致函布林肯 要求中国立即关闭拘押营释放被押人员](/articles/voa/1042198.md)
+
+3-18 [两名麦克在中国庭审本周五开始：加拿大密切关注](/articles/voa/1042199.md)
+
+3-18 [朝鲜称美国用“廉价伎俩”试图接触朝鲜 与美国对话是“浪费时间”](/articles/voa/1042200.md)
+
 3-18 [担心语音社媒软件社会动员力 中共约谈11家企业促其整改](/articles/voa/1042201.md)
 
 3-18 [亚特兰大枪击案枪手被控8项谋杀罪](/articles/voa/1042202.md)
@@ -592,12 +600,4 @@
 3-4 [脱贫背后是同化 大批维族人背井离乡被转至外地就业](/articles/voa/1042495.md)
 
 3-3 [缅甸抓捕多名记者，记者组织呼吁缅甸当局立即释放](/articles/voa/1042496.md)
-
-3-3 [近20年首次 德国将派军舰巡航南中国海](/articles/voa/1042497.md)
-
-3-3 [两会前瞻：消失的GDP目标会否再现？](/articles/voa/1042498.md)
-
-3-3 [缅甸爆发新的抗议 再有多位示威者丧生](/articles/voa/1042499.md)
-
-3-3 [保证成本低过中国 新德里促特斯拉在印度办厂](/articles/voa/1042500.md)
 
