--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-18 [北京退休教师陈兆志因言获罪    检方建议量刑两年半](/articles/rfa/1046126.md)
+
+3-18 [台湾不再将凤梨销往大陆？官员：假新闻制造社会动乱](/articles/rfa/1046127.md)
+
 3-18 [台湾陆委会主委首提“建设性模糊”](/articles/rfa/1046128.md)
 
 3-18 [各地楼市调控政策不断加码   防止资金制造房市泡沫](/articles/rfa/1046129.md)
@@ -596,8 +600,4 @@
 2-12 [拜登：要防中国吃掉我们的午餐](/articles/rfa/1046424.md)
 
 2-12 [近日爆红的“精英俱乐部”背后的技术](/articles/rfa/1046425.md)
-
-2-12 [季风:“醒来的人把春晚当笑话看”](/articles/rfa/1046426.md)
-
-2-12 [竞逐5G华为上诉   瑞典行政法院驳回](/articles/rfa/1046427.md)
 
