--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-18 [【异闻观止】 “离婚冷静期”实施三个月 武汉近6成夫妻“冷静”后放弃离婚](/articles/cdt/384826.md)
+
 3-18 [【网络民议】说错话的机会只有一次？郑国成失去了他的墙内平台](/articles/cdt/384843.md)
 
 3-18 [【CDT导览】《无依之地》的死与生：被审查巨蟒盘踞着的每一寸土地，都是无依之地](/articles/cdt/384845.md)
@@ -598,6 +600,4 @@
 2-6 [【图说天朝】如何在十个字以内描述出非常危险的场景？](/articles/cdt/386175.md)
 
 2-6 [资浅记者 | 纪念李文亮医生去世一周年](/articles/cdt/386178.md)
-
-2-6 [【中国哭墙】一年了，不要也不能遗忘。（2月1-6日，2021年）](/articles/cdt/386181.md)
 
