--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-19 [为何针对亚裔的暴力袭击难以被控仇恨犯罪？](/articles/nyt/1047073.md)
+
 3-18 [为何针对亚裔的暴力袭击难以被控仇恨犯罪？](/articles/nyt/1047074.md)
 
 3-18 [亚特兰大枪击案背后：美国亚裔的崛起和恐惧](/articles/nyt/1047075.md)
@@ -598,6 +600,4 @@
 12-30 [改变世界的25天：新冠疫情是如何在中国失控的？](/articles/nyt/1047371.md)
 
 12-30 [救猫人和反家暴：武汉封城回忆中的暖心故事](/articles/nyt/1047372.md)
-
-12-30 [中国的新冠疫苗接种运动：万事俱备，还差什么？](/articles/nyt/1047373.md)
 
