--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-19 [疫情减退，旅行松动，台湾呼吁北京取消两岸交流的政治障碍](/articles/voa/1042190.md)
+
+3-19 [粮食不够了？中国要求在动物饲料中减少玉米、豆粕用量](/articles/voa/1042191.md)
+
 3-19 [“美国高校，你想以与中共合作留名历史吗？” 美中科研合作是共赢还是养患](/articles/voa/1042192.md)
 
 3-19 [两名麦克在中国庭审本周五开始：加拿大密切关注](/articles/voa/1042193.md)
@@ -596,8 +600,4 @@
 3-4 [布林肯宣布中国是本世纪世界最大地缘政治考验](/articles/voa/1042488.md)
 
 3-4 [时事大家谈: 美中实力空前接近，亚太将见证危险十年？](/articles/voa/1042489.md)
-
-3-4 [3名青海藏族青少年因“违规”建微信群被警方逮捕](/articles/voa/1042490.md)
-
-3-4 [台湾新国安团队上任 迎来凤梨被禁难题](/articles/voa/1042491.md)
 
