--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,40 @@
 法广
 ------
 
+3-19 [维权协会在斯特拉斯堡游行 抗议华为将在阿尔萨斯建厂](/articles/rfi/1033144.md)
+
+3-19 [美国传唤多家中国电信企业，开始撤销两家中企在美经营权](/articles/rfi/1033145.md)
+
+3-19 [华日：中方计划要求撤特朗普对华措施, 拜习4月线上峰会](/articles/rfi/1033146.md)
+
+3-19 [沙利文通报北约秘书长阿拉斯加会晤 北约发布2020年度报告](/articles/rfi/1033147.md)
+
+3-19 [不满美日2+2会谈内容 李鸿忠向日本驻华大使表遗憾](/articles/rfi/1033148.md)
+
+3-19 [多方压力下，美国塔夫茨大学宣布将关闭校内孔子学院](/articles/rfi/1033149.md)
+
+3-19 [阿里、腾讯等11家企业被官方约谈，要求加强对语音社交、AI换脸监管](/articles/rfi/1033150.md)
+
+3-19 [拜登上任近2个月 北韩持续不理睬美国 – 法国国际广播电台 - RFI](/articles/rfi/1033151.md)
+
+3-19 [Google宣布今年在美投资逾70亿美元 创造1万就业 – 法国国际广播电台 - RFI](/articles/rfi/1033152.md)
+
+3-19 [被拜登说是刽子手 蒲亭回呛：你在说你自己 – 法国国际广播电台 - RFI](/articles/rfi/1033153.md)
+
+3-19 [全球COVID-19累计近1亿2121万例确诊 268万多人病故 – 法国国际广播电台 - RFI](/articles/rfi/1033154.md)
+
+3-19 [韩防长：区别对待韩日矛盾，继续加强韩美日安全合作](/articles/rfi/1033155.md)
+
+3-19 [民调：45%美国人认为中国是最大敌人，14%加拿大人对中国有好感](/articles/rfi/1033156.md)
+
+3-19 [美官员巡访印太 俄外长拉夫罗夫应邀下周访华](/articles/rfi/1033157.md)
+
+3-19 [中国媒体据报被要求淡化奥斯卡颁奖典礼报道](/articles/rfi/1033158.md)
+
+3-19 [两个迈克尔分别将于19日、22日开庭 加外交部发表声明](/articles/rfi/1033159.md)
+
+3-19 [欧盟与土耳其难民协议 安卡拉新思路](/articles/rfi/1033160.md)
+
 3-18 [维权协会在斯特拉斯堡游行 抗议华为将在阿尔萨斯建厂](/articles/rfi/1033161.md)
 
 3-18 [被拜登说是刽子手 蒲亭回呛：你在说你自己 – 法国国际广播电台 - RFI](/articles/rfi/1033162.md)
@@ -566,38 +600,4 @@
 3-8 [微软数十万邮箱遭窃 称黑客总部在中国 租美国服务器作案](/articles/rfi/1033442.md)
 
 3-8 [脱欧红人法拉奇宣布退出英国政坛 将关注三大议题上Cameo挣钱](/articles/rfi/1033443.md)
-
-3-8 [布伦特原油每桶涨破70美元 – 法国国际广播电台 - RFI](/articles/rfi/1033444.md)
-
-3-8 [日美澳印首脑将在周末举行线上会谈](/articles/rfi/1033445.md)
-
-3-8 [台帛将开放旅游泡泡帛琉总统惠恕仁将访台宣布](/articles/rfi/1033446.md)
-
-3-8 [经济复苏迹象不敌通膨疑虑 亚股多收跌 – 法国国际广播电台 - RFI](/articles/rfi/1033447.md)
-
-3-8 [解放报：CGNT将再遭英国制裁 - 法国报纸摘要](/articles/rfi/1033448.md)
-
-3-8 [美国人对中国的观感 - 美国专栏](/articles/rfi/1033449.md)
-
-3-8 [拜登将成立工作组应对微软邮件系统遭黑客入侵事件](/articles/rfi/1033450.md)
-
-3-8 [缅军方继续开枪镇压民间抗议，中国依然拒绝选边站](/articles/rfi/1033451.md)
-
-3-8 [菅义伟据报将成为首位访问拜登白宫的外国首脑](/articles/rfi/1033452.md)
-
-3-8 [为了迁就立法会改选香港区议会也要改变选法](/articles/rfi/1033453.md)
-
-3-8 [CNN：中国海军非吴下阿蒙实力仍输美国](/articles/rfi/1033454.md)
-
-3-8 [科兴疫苗连日出意外接种递减仍有人为爱国打针](/articles/rfi/1033455.md)
-
-3-8 [当年港英大红人范徐丽泰今天被指中国喉舌](/articles/rfi/1033456.md)
-
-3-8 [巴赫料将轻松连任国际奥会主席 东奥仍是挑战 – 法国国际广播电台 - RFI](/articles/rfi/1033457.md)
-
-3-8 [利率疑虑 日股连3天收跌 – 法国国际广播电台 - RFI](/articles/rfi/1033458.md)
-
-3-8 [选卡达公开赛复出 费德瑞：从没考虑退休 – 法国国际广播电台 - RFI](/articles/rfi/1033459.md)
-
-3-8 [柏林联盟踢和比勒费尔德 门将路德又撞头 – 法国国际广播电台 - RFI](/articles/rfi/1033460.md)
 
