--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-19 [中国本周开审两名加拿大人    意在对美施压？](/articles/rfa/1046124.md)
+
+3-19 [一边会晤  美国一边对在美中企下手](/articles/rfa/1046125.md)
+
 3-18 [北京退休教师陈兆志因言获罪    检方建议量刑两年半](/articles/rfa/1046126.md)
 
 3-18 [台湾不再将凤梨销往大陆？官员：假新闻制造社会动乱](/articles/rfa/1046127.md)
@@ -596,8 +600,4 @@
 2-12 [揭露新疆性暴力的证人抵美  BBC被禁在中国落地](/articles/rfa/1046422.md)
 
 2-12 [美国不接受世卫调查结果  世卫发现新线索](/articles/rfa/1046423.md)
-
-2-12 [拜登：要防中国吃掉我们的午餐](/articles/rfa/1046424.md)
-
-2-12 [近日爆红的“精英俱乐部”背后的技术](/articles/rfa/1046425.md)
 
