--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-19 [应对中俄 乌克兰日本加强防务合作](/articles/voa/1042188.md)
+
+3-19 [香港多个民主派政党退出联合平台民间人权阵线](/articles/voa/1042189.md)
+
 3-19 [疫情减退，旅行松动，台湾呼吁北京取消两岸交流的政治障碍](/articles/voa/1042190.md)
 
 3-19 [粮食不够了？中国要求在动物饲料中减少玉米、豆粕用量](/articles/voa/1042191.md)
@@ -596,8 +600,4 @@
 3-4 [美首都国民警卫队司令：国会骚乱事件期间出兵延误三小时](/articles/voa/1042486.md)
 
 3-4 [伊拉克一处基地遭火箭袭击 一名美国文职合同工丧生](/articles/voa/1042487.md)
-
-3-4 [布林肯宣布中国是本世纪世界最大地缘政治考验](/articles/voa/1042488.md)
-
-3-4 [时事大家谈: 美中实力空前接近，亚太将见证危险十年？](/articles/voa/1042489.md)
 
