--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-19 [该不该与北大合作？康奈尔校方和教授们陷入分歧](/articles/voa/1042185.md)
+
+3-19 [欧洲药管局判定阿斯利康新冠疫苗安全有效](/articles/voa/1042186.md)
+
+3-19 [时事大家谈: 美日韩欲联手抗中，北京平壤抱团取暖？](/articles/voa/1042187.md)
+
 3-19 [应对中俄 乌克兰日本加强防务合作](/articles/voa/1042188.md)
 
 3-19 [香港多个民主派政党退出联合平台民间人权阵线](/articles/voa/1042189.md)
@@ -594,10 +600,4 @@
 3-4 [印度扭转对华经济依赖 力推贸易伙伴多元化](/articles/voa/1042483.md)
 
 3-4 [自由之家：全球民主自由衰退 中国“恶意影响”尤甚](/articles/voa/1042484.md)
-
-3-4 [布林肯首场外交政策演说，将中国挑战列入八大优先](/articles/voa/1042485.md)
-
-3-4 [美首都国民警卫队司令：国会骚乱事件期间出兵延误三小时](/articles/voa/1042486.md)
-
-3-4 [伊拉克一处基地遭火箭袭击 一名美国文职合同工丧生](/articles/voa/1042487.md)
 
