--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+3-19 [央视曝光商家收集人脸信息 到底谁在“偷脸”？](/articles/rfa/1046121.md)
+
+3-19 [欧盟“疫苗护照”不认可中国疫苗   成员国自行决定是否接纳](/articles/rfa/1046122.md)
+
+3-19 [世卫溯源报告下周发布    其透明度及独立性仍遭质疑](/articles/rfa/1046123.md)
+
 3-19 [中国本周开审两名加拿大人    意在对美施压？](/articles/rfa/1046124.md)
 
 3-19 [一边会晤  美国一边对在美中企下手](/articles/rfa/1046125.md)
@@ -594,10 +600,4 @@
 2-12 [大陆历史漫画进台湾校园  被指向学生洗脑](/articles/rfa/1046419.md)
 
 2-12 [缅甸民众持续抗议示威     美国制裁缅甸军政府](/articles/rfa/1046420.md)
-
-2-12 [美媒曝腾讯高管涉泄微信数据而被拘](/articles/rfa/1046421.md)
-
-2-12 [揭露新疆性暴力的证人抵美  BBC被禁在中国落地](/articles/rfa/1046422.md)
-
-2-12 [美国不接受世卫调查结果  世卫发现新线索](/articles/rfa/1046423.md)
 
