--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-19 [白宫要义: 白宫: 是否与习再对话待阿拉斯加会后决定，反驳对中强硬导致歧视亚裔说法](/articles/voa/1042181.md)
+
 3-19 [塔夫茨大学宣布将关闭孔子学院](/articles/voa/1042182.md)
 
 3-19 [拜登总统下令美国降半旗 悼念亚特兰大枪击惨案死难者](/articles/voa/1042183.md)
@@ -598,6 +600,4 @@
 3-4 [白宫要义: 拜登政府公布国安与外交《临时战略方针》](/articles/voa/1042479.md)
 
 3-4 [美土木工程师协会：美国基础设施评分C-](/articles/voa/1042480.md)
-
-3-4 [大学招生该不该考虑种族因素？哈佛“歧视亚裔”案上诉最高法院](/articles/voa/1042481.md)
 
