--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+3-19 [日本点名谴责中国 北京没想到 - 要闻分析](/articles/rfi/1033134.md)
+
+3-19 [欧盟同意制裁中国  对华政策重大转变](/articles/rfi/1033135.md)
+
+3-19 [美中2+2会谈今日举行 华尔街日报称双方认知差异巨大修复关系困难重重](/articles/rfi/1033136.md)
+
+3-19 [德国第三波新冠疫情来势凶猛](/articles/rfi/1033137.md)
+
+3-19 [冰岛欢迎持Covid疫苗接种证明旅客](/articles/rfi/1033138.md)
+
 3-19 [法国宣布巴黎大区在内的16省&quot;封城&quot;应对疫情快速蔓延](/articles/rfi/1033139.md)
 
 3-19 [欧盟药品管理局称阿斯利康疫苗安全有效 法德等国纷纷恢复接种阿斯利康疫苗](/articles/rfi/1033140.md)
@@ -590,14 +600,4 @@
 3-8 [快艇争冠呼声高 雷纳德仍愿打东京奥运 – 法国国际广播电台 - RFI](/articles/rfi/1033432.md)
 
 3-8 [叙利亚总统府：阿塞德及第一夫人感染新型冠状病毒 – 法国国际广播电台 - RFI](/articles/rfi/1033433.md)
-
-3-8 [缅甸全国大罢工 3名反政变示威者遭击毙 – 法国国际广播电台 - RFI](/articles/rfi/1033434.md)
-
-3-8 [国际妇女节法国执政党议员提促妇女经济平等法 - 今日经济](/articles/rfi/1033435.md)
-
-3-8 [“与众不同”“桀骜不驯的才华”——巴黎歌剧院前首席舞者帕特里克·杜邦 - 法国文艺欣赏](/articles/rfi/1033436.md)
-
-3-8 [国际妇女节 人权组织：致敬中国的勇敢女性](/articles/rfi/1033437.md)
-
-3-8 [国药控股高层披露接种疫苗已经1年 ，那么疫苗啥时开始研发的？](/articles/rfi/1033438.md)
 
