--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-19 [中国欲抢占世界科技创新高地，但在现行制度里只能是“中国梦”](/articles/voa/1042177.md)
+
+3-19 [《柳叶刀》最新研究报告：武汉市去年4月约6.9%人有新冠抗体](/articles/voa/1042178.md)
+
+3-19 [美韩2加2会谈共同关切朝鲜核威胁](/articles/voa/1042179.md)
+
 3-19 [参议院确认伯恩斯担任中情局长](/articles/voa/1042180.md)
 
 3-19 [白宫要义: 白宫: 是否与习再对话待阿拉斯加会后决定，反驳对中强硬导致歧视亚裔说法](/articles/voa/1042181.md)
@@ -594,10 +600,4 @@
 3-4 [香港预计将是中国两会重点议题](/articles/voa/1042475.md)
 
 3-4 [德州将取消口罩强制令](/articles/voa/1042476.md)
-
-3-4 [坦登退出提名 卡多纳宣誓就任美国教育部长](/articles/voa/1042477.md)
-
-3-4 [防范中共影响 犹他州众议院通过决议要求关闭该州孔院](/articles/voa/1042478.md)
-
-3-4 [白宫要义: 拜登政府公布国安与外交《临时战略方针》](/articles/voa/1042479.md)
 
