--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,16 @@
 路透
 ------
 
+3-19 [美国安顾问称会维护原则和朋友 中方反击称反对美国干涉内政](/articles/reuters/1040367.md)
+
+3-19 [金价因美债收益率急升而下滑 钯金升至一年新高](/articles/reuters/1040368.md)
+
+3-19 [美元从美联储会议后的跌势中反弹 受公债收益率大涨提振](/articles/reuters/1040369.md)
+
+3-19 [国际油价骤降7%创去年夏天以来最大单日跌幅 因欧洲多国疫情又恶化](/articles/reuters/1040370.md)
+
+3-19 [美股大幅收挫 受累于公债收益率急升和新冠疫情新忧虑](/articles/reuters/1040371.md)
+
 3-18 [独家：谷歌欲阻挡Cookies 引来美国反垄断调查--消息](/articles/reuters/1040372.md)
 
 3-18 [谷歌计划今年在美国投资逾70亿美元 创造至少1万个全职岗位](/articles/reuters/1040373.md)
@@ -590,14 +600,4 @@
 3-6 [美国财长叶伦称收益率上升意味着复苏转强 而非通胀疑虑升温](/articles/reuters/1040665.md)
 
 3-6 [美国参议院开始就1.9万亿美元新冠救助议案进行辩论 料周末进行最终表决](/articles/reuters/1040666.md)
-
-3-6 [独家：牛津大学研究显示阿斯利康疫苗对巴西发现的变异病毒有效--消息](/articles/reuters/1040667.md)
-
-3-6 [知名科技巨头批评人士吴修铭料将加入白宫国家经济委员会--纽约时报](/articles/reuters/1040668.md)
-
-3-6 [中国交通部约谈滴滴要求保障驾驶员和消费者合法权益 严防“店大欺客”](/articles/reuters/1040669.md)
-
-3-6 [两位白宫经济顾问称美国就业复苏任重道远 需要更多支持](/articles/reuters/1040670.md)
-
-3-6 [综述：美国2月就业岗位增幅超预期 劳动力市场复苏重新站稳脚跟](/articles/reuters/1040671.md)
 
