--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+3-19 [留学“招生机器”是怎样运作的？](/articles/ft/1045888.md)
+
+3-19 [黄峥辞职与中国企业家的“技术自觉”](/articles/ft/1045889.md)
+
+3-19 [对话贾德基金会艺术总监、艺术家唐纳德•贾德之子弗莱文•贾德](/articles/ft/1045890.md)
+
 3-18 [每周时事分析：拜登将对中朝两国一箭双雕](/articles/ft/1045891.md)
 
 3-18 [朝鲜：美国不改变立场就不可能接触](/articles/ft/1045892.md)
@@ -594,10 +600,4 @@
 1-27 [拜登与普京讨论延长《新削减战略武器条约》](/articles/ft/1046186.md)
 
 1-27 [Lex专栏：中国股市上涨的最好时光已经结束](/articles/ft/1046187.md)
-
-1-27 [拜登承诺打击对亚裔美国人的歧视](/articles/ft/1046188.md)
-
-1-27 [楼市泡沫和食利者阶层的形成](/articles/ft/1046189.md)
-
-1-27 [疫情未了，市场是否过于乐观了？](/articles/ft/1046190.md)
 
