--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-19 [王宇独子包卓轩在美国申请政庇 曾一度被关](/articles/rfa/1046115.md)
+
 3-19 [茉莉花革命在中国：一场没发生的革命](/articles/rfa/1046116.md)
 
 3-19 [美中终于坐下来会谈     双方将带着什么离开?](/articles/rfa/1046117.md)
@@ -598,6 +600,4 @@
 2-13 [中国禁止进口意大利猪肉  称可能传播新冠病毒惹争议](/articles/rfa/1046413.md)
 
 2-13 [拜登松绑孔子学院、Tiktok和微信?   未必如此](/articles/rfa/1046414.md)
-
-2-13 [加拿大成港人移居首选  去年签证申请大增20%](/articles/rfa/1046415.md)
 
