--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-19 [纽约艺术家绘肖像画向新冠医护人员致敬](/articles/voa/1042173.md)
+
+3-19 [出走的香港警官：香港法治不再，执法不再可信](/articles/voa/1042174.md)
+
 3-19 [美议员提案撤销中国永久性正常贸易关系地位](/articles/voa/1042175.md)
 
 3-19 [美两党参议员重提助台湾取得世卫大会观察员身份法案](/articles/voa/1042176.md)
@@ -596,8 +600,4 @@
 3-4 [白宫、国会展开协商应对北京威胁 共和党推法防堵中国科技企业](/articles/voa/1042471.md)
 
 3-4 [应对气候变化，美中合作面临重重障碍](/articles/voa/1042472.md)
-
-3-4 [共和党人在创纪录的选举投票率后寻求改变投票方式](/articles/voa/1042473.md)
-
-3-4 [白宫公布国家安全战略方针：中国是唯一有综合实力挑战国际体制的竞争者](/articles/voa/1042474.md)
 
