--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,20 @@
 法广
 ------
 
+3-19 [中美对话开场白刀光剑影 硬碰硬](/articles/rfi/1033127.md)
+
+3-19 [美中高层会谈 杨洁篪扬言坚定行动回应华府干涉 – 法国国际广播电台 - RFI](/articles/rfi/1033128.md)
+
+3-19 [法国19日恢复施打AZ疫苗 总理也将接种 – 法国国际广播电台 - RFI](/articles/rfi/1033129.md)
+
+3-19 [欧盟为AZ疫苗安全背书 义大利19日起恢复施打 – 法国国际广播电台 - RFI](/articles/rfi/1033130.md)
+
+3-19 [美股收黑 那斯达克大跌3% – 法国国际广播电台 - RFI](/articles/rfi/1033131.md)
+
+3-19 [布林肯：中国行为威胁全球稳定 – 法国国际广播电台 - RFI](/articles/rfi/1033132.md)
+
+3-19 [中国将很快审判两名加拿大人, 加拿大谴责“任意逮捕” 和“人质外交” - 法国世界报](/articles/rfi/1033133.md)
+
 3-19 [日本点名谴责中国 北京没想到 - 要闻分析](/articles/rfi/1033134.md)
 
 3-19 [欧盟同意制裁中国  对华政策重大转变](/articles/rfi/1033135.md)
@@ -586,18 +600,4 @@
 3-9 [缅甸9大工会罢工瘫痪经济 再有两名民主派示威者被杀](/articles/rfi/1033425.md)
 
 3-9 [因电视认罪及偏颇报道 英国管理部门处罚CGTN持照商](/articles/rfi/1033426.md)
-
-3-8 [欧盟准备对缅甸军方下属企业进行制裁](/articles/rfi/1033427.md)
-
-3-8 [跟王室算账 梅根：“我只是不想再活着了”](/articles/rfi/1033428.md)
-
-3-8 [王毅：“中俄组合”团结如山，联手反对“颜色革命”](/articles/rfi/1033429.md)
-
-3-8 [微软电邮系统遇骇 欧洲银行管理局也遭殃 – 法国国际广播电台 - RFI](/articles/rfi/1033430.md)
-
-3-8 [国际妇女节悲歌  联合国：疫情助长童婚 – 法国国际广播电台 - RFI](/articles/rfi/1033431.md)
-
-3-8 [快艇争冠呼声高 雷纳德仍愿打东京奥运 – 法国国际广播电台 - RFI](/articles/rfi/1033432.md)
-
-3-8 [叙利亚总统府：阿塞德及第一夫人感染新型冠状病毒 – 法国国际广播电台 - RFI](/articles/rfi/1033433.md)
 
