--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-19 [美中阿拉斯加首场会谈针锋相对 分析人士：向国内观众展现强硬姿态](/articles/voa/1042169.md)
+
+3-19 [佐治亚枪击案引发全美讨论 国会举行反仇恨听证会](/articles/voa/1042170.md)
+
 3-19 [致命毒瘾问题因新冠大流行而失焦](/articles/voa/1042171.md)
 
 3-19 [美中官员开始面对面高层会谈前在媒体摄像机前强硬对攻](/articles/voa/1042172.md)
@@ -596,8 +600,4 @@
 3-4 [美联社：两会看点](/articles/voa/1042467.md)
 
 3-4 [香港被全球经济自由度排行榜除名 港府批“政治偏见”](/articles/voa/1042468.md)
-
-3-4 [缅甸民众不畏致命暴力镇压继续上街 美国呼吁中国建设性施加影响力](/articles/voa/1042469.md)
-
-3-4 [美国务卿：中国至今依然不透明分享新冠疫情信息](/articles/voa/1042470.md)
 
