--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-19 [中美需要打造新竞合关系](/articles/ft/1045885.md)
+
 3-19 [欧洲多国即将恢复接种牛津/阿斯利康疫苗](/articles/ft/1045886.md)
 
 3-19 [NFT狂潮如何颠覆收藏和投资市场？](/articles/ft/1045887.md)
@@ -598,6 +600,4 @@
 1-27 [拜登将如何处理特朗普的“南海遗产”？](/articles/ft/1046183.md)
 
 1-27 [与FT共进下午茶：京兆尹主厨尹浩](/articles/ft/1046184.md)
-
-1-27 [蚂蚁集团计划出售EyeVerify](/articles/ft/1046185.md)
 
