--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-19 [美中高层会谈火药味十足，双方外交官互相指责](/articles/nyt/1047069.md)
+
 3-19 [朝鲜问题迫使拜登在美中关系之间寻求平衡](/articles/nyt/1047070.md)
 
 3-19 [简报：美中高层会面针锋相对；两名加拿大人将在中国受审](/articles/nyt/1047071.md)
@@ -598,6 +600,4 @@
 12-31 [她打趣男性过分自信，他们举报她“制造性别对立”](/articles/nyt/1047367.md)
 
 12-31 [中欧达成投资协定，但正式生效困难重重](/articles/nyt/1047368.md)
-
-12-31 [2020年，我们在现场：本年度最受欢迎的13篇通讯](/articles/nyt/1047369.md)
 
