--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-19 [国际特赦组织 | 骨肉分离的噩梦：镇压下维吾尔家庭无法亲子团聚](/articles/cdt/384819.md)
+
 3-19 [【网络民议】B站作者批评越南 评论区网友“阴阳怪气”](/articles/cdt/384822.md)
 
 3-18 [【异闻观止】 “离婚冷静期”实施三个月 武汉近6成夫妻“冷静”后放弃离婚](/articles/cdt/384826.md)
@@ -598,6 +600,4 @@
 2-7 [真实故事计划 | 另一个“拉姆”](/articles/cdt/386167.md)
 
 2-7 [【网络民议】在Clubhouse听了快两个小时的#两岸青年大乱聊#](/articles/cdt/386169.md)
-
-2-6 [【图说天朝】如何在十个字以内描述出非常危险的场景？](/articles/cdt/386175.md)
 
