--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,20 @@
 路透
 ------
 
+3-19 [人民币收盘小跌至逾一周新低 关注中美高层对话“正餐”成色](/articles/reuters/1040329.md)
+
+3-19 [中国金融市场一周走势回顾](/articles/reuters/1040330.md)
+
+3-19 [中国外交部称中美会谈开场白充满火药味非中方初衷 后面还有“正餐”才是重头戏](/articles/reuters/1040331.md)
+
+3-19 [中国2月银行结售汇顺差280亿美元环降逾三成 市场结售汇意愿稳定--外管局](/articles/reuters/1040332.md)
+
+3-19 [新开发银行拟发行50亿元熊猫债 为新注册200亿额度内首期](/articles/reuters/1040333.md)
+
+3-19 [股票基金创下单周吸金天量纪录 无视债券收益率急升--美国银行](/articles/reuters/1040334.md)
+
+3-19 [中国股市沪综指收低1.69% 中美高层对话气氛紧张打压人气](/articles/reuters/1040335.md)
+
 3-19 [焦点：美债收益率步步高升 涨速挑动债券基金经理人敏感神经](/articles/reuters/1040336.md)
 
 3-19 [独家：台湾鸿海与越南汽车大厂VinFast就电动车合作进行初步洽谈--消息](/articles/reuters/1040337.md)
@@ -586,18 +600,4 @@
 3-8 [综述：中国十四五未设GDP量化目标并非不要增速 有把握“保持一定增速”](/articles/reuters/1040627.md)
 
 3-8 [推行“疫苗护照”仍不足以重振旅游 料全球旅游业要到2024年始复苏--报告](/articles/reuters/1040628.md)
-
-3-8 [中国2025年研发经费总量有望超过3.7万亿元 基础研究投入达2,800亿元--发改委](/articles/reuters/1040629.md)
-
-3-8 [中国春华资本正筹组新美元基金 规模上限50亿美元--消息人士](/articles/reuters/1040630.md)
-
-3-8 [哈里王子说查尔斯王子曾拒接他的电话 对父亲感到失望](/articles/reuters/1040631.md)
-
-3-8 [特朗普要求三个共和党组织停止用其名义募款](/articles/reuters/1040632.md)
-
-3-8 [调查：欧元区通胀上升势头料无法持久 将多年低于目标](/articles/reuters/1040633.md)
-
-3-8 [日本政府官房长官称拜登与菅义伟的会晤尚未确定](/articles/reuters/1040634.md)
-
-3-8 [美韩达成协议 韩国将提高驻韩美军的费用分摊--美国务院](/articles/reuters/1040635.md)
 
