--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-19 [拜登和哈里斯将慰藉悲伤的亚裔美国人](/articles/voa/1042167.md)
+
 3-19 [上海维权人士陈建芳庭审 人权律师王宇遭警方控制](/articles/voa/1042168.md)
 
 3-19 [美中阿拉斯加首场会谈针锋相对 分析人士：向国内观众展现强硬姿态](/articles/voa/1042169.md)
@@ -598,6 +600,4 @@
 3-4 [中共控制下的人大代表的产生与参政议政](/articles/voa/1042465.md)
 
 3-4 [习发起党史学习教育洗脑 提升一尊地位继续掌权](/articles/voa/1042466.md)
-
-3-4 [美联社：两会看点](/articles/voa/1042467.md)
 
