--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-19 [中国战狼外交为国内宣传服务   学者:中国准备第二次太平洋战争](/articles/rfa/1046114.md)
+
 3-19 [王宇独子包卓轩在美国申请政庇 曾一度被关](/articles/rfa/1046115.md)
 
 3-19 [茉莉花革命在中国：一场没发生的革命](/articles/rfa/1046116.md)
@@ -598,6 +600,4 @@
 2-13 [美科技和商界团体推动积极数字政策  应对中国挑战](/articles/rfa/1046412.md)
 
 2-13 [中国禁止进口意大利猪肉  称可能传播新冠病毒惹争议](/articles/rfa/1046413.md)
-
-2-13 [拜登松绑孔子学院、Tiktok和微信?   未必如此](/articles/rfa/1046414.md)
 
