--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+3-19 [法智库专家：中美首轮舌战不是对话 是喊给本国人听的 - 要闻解说](/articles/rfi/1033106.md)
+
+3-19 [亚股跌多涨少 – 法国国际广播电台 - RFI](/articles/rfi/1033107.md)
+
 3-19 [台湾主动提出恢复两岸交流措施盼大陆相对回应](/articles/rfi/1033108.md)
 
 3-19 [全球青年保护气候大游行 要行动不要空的承诺](/articles/rfi/1033109.md)
@@ -596,8 +600,4 @@
 3-15 [国际武器交易5年来首次持平](/articles/rfi/1033404.md)
 
 3-15 [传取缔 至少八团体退出民主派大型游行搞手「民阵」 支联会决留下](/articles/rfi/1033405.md)
-
-3-15 [香港告急 约章期连结海外港人为港发声](/articles/rfi/1033406.md)
-
-3-15 [澳洲数千女性穿黑衣 上街争性平 – 法国国际广播电台 - RFI](/articles/rfi/1033407.md)
 
