--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+3-19 [联邦议院评估报告: 办奥运无助于改善中国人权](/articles/dw/1043425.md)
+
+3-19 [“世界最幸福国家“：芬兰四连冠](/articles/dw/1043426.md)
+
 3-19 [宣传部门官员：新疆民众欲起诉德国学者及BBC](/articles/dw/1043427.md)
 
 3-19 [朝鲜宣布与马来西亚断绝外交关系](/articles/dw/1043428.md)
@@ -596,8 +600,4 @@
 2-24 [德国士兵援助葡萄牙 医院属于中国集团](/articles/dw/1043723.md)
 
 2-24 [香港财政赤字降低 来年纾困是重点](/articles/dw/1043724.md)
-
-2-24 [默克尔警告第三波疫情已经到来](/articles/dw/1043725.md)
-
-2-24 [中印边境冲突伤亡 中国为何沉默八个月？](/articles/dw/1043726.md)
 
