--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-19 [美国特使揭示拜登和特朗普在伊朗人权问题上的一个重要区别](/articles/voa/1042163.md)
+
 3-19 [台专家：疫情缓和后，两岸应尽快展开经贸对话](/articles/voa/1042164.md)
 
 3-19 [美中阿拉斯加会谈爆火药味，学者：吵归吵 谈归谈，不要打起来](/articles/voa/1042165.md)
@@ -598,6 +600,4 @@
 3-5 [汪洋讲话露玄机，邓小平12字治港方针已荡然无存](/articles/voa/1042461.md)
 
 3-5 [中老铁路预计年底通车 是双赢还是陷阱？](/articles/voa/1042462.md)
-
-3-4 [赵小兰被指公器私用发展家族生意，赵回应：宣传家庭乃职责所在](/articles/voa/1042463.md)
 
