--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-19 [美国亚裔仇视犯罪激增](/articles/dw/1043424.md)
+
 3-19 [联邦议院评估报告: 办奥运无助于改善中国人权](/articles/dw/1043425.md)
 
 3-19 [“世界最幸福国家“：芬兰四连冠](/articles/dw/1043426.md)
@@ -598,6 +600,4 @@
 2-24 [德国一萨拉菲分子被判10年监禁](/articles/dw/1043722.md)
 
 2-24 [德国士兵援助葡萄牙 医院属于中国集团](/articles/dw/1043723.md)
-
-2-24 [香港财政赤字降低 来年纾困是重点](/articles/dw/1043724.md)
 
