--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-20 [美国亚特兰大枪杀案后亚裔社区恐慌](/articles/rfi/1033094.md)
+
 3-19 [担心遭泄密 传中国禁止特斯拉汽车进入军队营区和家属院](/articles/rfi/1033095.md)
 
 3-19 [马不停蹄，布林肯下周出访布鲁塞尔出席北约会议](/articles/rfi/1033096.md)
@@ -598,6 +600,4 @@
 3-15 [防疫情再起 德ICU医师吁立刻恢复部分封城 – 法国国际广播电台 - RFI](/articles/rfi/1033392.md)
 
 3-15 [荷兰大选登场 料总理吕特可连任 – 法国国际广播电台 - RFI](/articles/rfi/1033393.md)
-
-3-15 [从《无依之地》看“铁锈地带” - 美国专栏](/articles/rfi/1033394.md)
 
