--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+3-20 [瑞士政府通过首个公开对华战略](/articles/rfi/1033088.md)
+
+3-20 [中国驻英使馆新址或将被“天安门广场、香港路”等地名环绕](/articles/rfi/1033089.md)
+
 3-20 [以色列：孕妇接种Covid疫苗反应良好](/articles/rfi/1033090.md)
 
 3-20 [前高官披露英国政府制定对华政策内部争斗](/articles/rfi/1033091.md)
@@ -596,8 +600,4 @@
 3-15 [法国专家：拜登对华路线很清晰 欧洲对台海局势态度应更明确 - 国际纵横](/articles/rfi/1033386.md)
 
 3-15 [见杨洁篪与王毅前 布林肯与奥斯汀罕投书呼吁团结抗中](/articles/rfi/1033387.md)
-
-3-15 [昂山素季线上听证会被推迟 环时呼吁缅甸期望中国介入的势力保持清醒 - 要闻解说](/articles/rfi/1033388.md)
-
-3-15 [华为开拓南泥湾 科技养猪养鱼助挖坑道](/articles/rfi/1033389.md)
 
