--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-20 [中国欲做科技霸主 美国起而迎击，科技“决斗”已经开始](/articles/voa/1042156.md)
+
 3-20 [僵人症患者同病相怜长跑880公里募款](/articles/voa/1042157.md)
 
 3-20 [北约顶级科学家因充当中国间谍被判处三年监禁](/articles/voa/1042158.md)
@@ -598,6 +600,4 @@
 3-5 [47名香港民主派颠覆罪15人原获保释 律政司即时申覆核法官撤保释](/articles/voa/1042454.md)
 
 3-5 [保护记者组织呼吁金边允许华裔记者返回柬埔寨工作](/articles/voa/1042455.md)
-
-3-5 [“我随时愿意打一场美好的仗” 蓬佩奥剑指2024总统选战？](/articles/voa/1042456.md)
 
