--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-20 [拜登又摔了：这次是要飞亚特兰大慰问亚裔](/articles/rfi/1033079.md)
+
+3-20 [加拿大人在华受审 特鲁多称中美阿拉斯加对话必谈此事](/articles/rfi/1033080.md)
+
+3-20 [潘永忠谈2021大型网络汉藏民间国际纪念活动 - 公民论坛](/articles/rfi/1033081.md)
+
 3-20 [中国开审两位加拿大公民被控间谍案](/articles/rfi/1033082.md)
 
 3-20 [法总理，英首相接种阿斯利康第一针，默克尔仍在排队](/articles/rfi/1033083.md)
@@ -594,10 +600,4 @@
 3-16 [德国加入欧洲国家停打AZ疫苗行列 – 法国国际广播电台 - RFI](/articles/rfi/1033377.md)
 
 3-15 [习近平《求是》发文指《努力成为世界主要科学中心和创新高地》](/articles/rfi/1033378.md)
-
-3-15 [法国维吾尔族协会举办示威 法国公民社会积极行动](/articles/rfi/1033379.md)
-
-3-15 [成都一座“啃地石狮”石雕 遭官媒批涉懒政](/articles/rfi/1033380.md)
-
-3-15 [全球武器出口停止成长 2000年代初以来首次 – 法国国际广播电台 - RFI](/articles/rfi/1033381.md)
 
