--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-20 [美国加强与湄公河国家合作 中国酸溜溜？](/articles/rfa/1046103.md)
+
 3-20 [大学毕业生首超九百万  中国鼓励当个体户](/articles/rfa/1046104.md)
 
 3-20 [斯帕弗秘密接受庭审  加拿大批中国司法缺乏透明](/articles/rfa/1046105.md)
@@ -598,6 +600,4 @@
 2-16 [中国查获假新冠疫苗近六万支 部分流向境外](/articles/rfa/1046401.md)
 
 2-16 [法国总统以农历新年取代中国新年 与其他亚洲国家交好](/articles/rfa/1046402.md)
-
-2-15 [Clubhouse资料恐被送中？ 专家：确实存在风险](/articles/rfa/1046403.md)
 
