--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-20 [中国数字丝绸之路曝安全隐忧](/articles/rfa/1046101.md)
+
+3-20 [2034美中开战？一本小说描述的美中误判的残酷后果](/articles/rfa/1046102.md)
+
 3-20 [美国加强与湄公河国家合作 中国酸溜溜？](/articles/rfa/1046103.md)
 
 3-20 [大学毕业生首超九百万  中国鼓励当个体户](/articles/rfa/1046104.md)
@@ -596,8 +600,4 @@
 2-16 [日知名女配音艺人自爆参拜靖国神社  中国小粉红喊打喊杀骂声不迭](/articles/rfa/1046399.md)
 
 2-16 [加拿大等58国发表反任意拘押宣言 学者分析此举针对中国](/articles/rfa/1046400.md)
-
-2-16 [中国查获假新冠疫苗近六万支 部分流向境外](/articles/rfa/1046401.md)
-
-2-16 [法国总统以农历新年取代中国新年 与其他亚洲国家交好](/articles/rfa/1046402.md)
 
