--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-20 [外交官全面“战狼化”       余茂春: 中共外交大失败](/articles/rfa/1046100.md)
+
 3-20 [中国数字丝绸之路曝安全隐忧](/articles/rfa/1046101.md)
 
 3-20 [2034美中开战？一本小说描述的美中误判的残酷后果](/articles/rfa/1046102.md)
@@ -598,6 +600,4 @@
 2-16 [北京小汤山强拆：知名古迹袁氏三礼故居遭拆除](/articles/rfa/1046398.md)
 
 2-16 [日知名女配音艺人自爆参拜靖国神社  中国小粉红喊打喊杀骂声不迭](/articles/rfa/1046399.md)
-
-2-16 [加拿大等58国发表反任意拘押宣言 学者分析此举针对中国](/articles/rfa/1046400.md)
 
